2005-08-20  Joe Mistachkin  <joe@mistachkin.com>

	* win/tkWinX.c: Fixed bad cast. [Bug 1216006]

2005-08-18  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>

	* doc/GetFont.3: Reworded to reflect the truth. [Bug 1151523]

2005-08-16 George Peter Staplin <GeorgePS@XMission.com>

	* doc/CrtItemType.3 prototypes were lacking [] after objv.  Thus
	the man page was wrong about the actual prototypes.  This was verified
	by studying tkCanvBmap.c.

2005-08-13 Chengye Mao <chengye.geo@yahoo.com>

	* generic/tkOldConfig.c Fixed bug # 1258604.  This bug was
	introduced into the modfied Tk_ConfigureWidget. It failed
	to properly handle the specFlags' bit TK_CONFIG_OPTION_SPECIFIED.

2005-08-12  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>

	* generic/tkOldConfig.c (Tk_ConfigureWidget): Stop storing per-thread
	data in global data structures. Store it in per-interpreter data (i.e.
	per-thread data) instead. [Bug 749908]

2005-08-10  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkFrame.c (CreateFrame) and others: Don't use size_t
	when working with Tcl_GetStringFromObj because it is not 64-bit
	clean. [Bug 1252702]

2005-08-04  Vince Darley <vincentdarley@users.sourceforge.net>

	* doc/text.n: Clarify behaviour of tab stops (as per [Bug 1247835])

2005-08-09  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tkMacOSXCarbonEvents.c (AppEventHandlerProc): handle carbon
	events sent directly to application event target via the general
	TkMacOSXProcessEvent() in the same way as events posted to the event
	loop. Moved existing app event handlers to tkMacOSXWindowEvent.c.
	(TkMacOSXInitCarbonEvents): register our application event handler for
	kEventWindowExpanded events to deal with uncollapsing from the dock.

	* macosx/tkMacOSXEvent.h: made TkMacOSXProcessEvent() non-static, added
	* macosx/tkMacOSXEvent.c: new interp field to TkMacOSXEvent struct for
				  use by app event handler.

	* macosx/tkMacOSXMouseEvent.c (TkMacOSXProcessMouseEvent): retrieve