@@ -1,3 +1,8 @@
+2005-08-22  Daniel Steffen  <das@users.sourceforge.net>
+
+	* macosx/tkMacOSXButton.c:
+	* macosx/tkMacOSXDialog.c: fix warnings.
+
 2005-08-20  Joe Mistachkin  <joe@mistachkin.com>
 
 	* win/tkWinX.c: Fixed bad cast. [Bug 1216006]
